RESOLVED FIXED 258291
AX: AXTextMarker::boundaryPoint() can nullptr crash after WeakPtr<Node> is destroyed
https://bugs.webkit.org/show_bug.cgi?id=258291
Summary AX: AXTextMarker::boundaryPoint() can nullptr crash after WeakPtr<Node> is de...
Tyler Wilcock
Reported 2023-06-19 19:19:54 PDT
...
Attachments
Patch (1.73 KB, patch)
2023-06-19 19:26 PDT, Tyler Wilcock
no flags
Radar WebKit Bug Importer
Comment 1 2023-06-19 19:20:05 PDT
Tyler Wilcock
Comment 2 2023-06-19 19:21:45 PDT
Tyler Wilcock
Comment 3 2023-06-19 19:26:01 PDT
chris fleizach
Comment 4 2023-06-19 23:17:15 PDT
Comment on attachment 466763 [details] Patch Thanks
EWS
Comment 5 2023-06-20 00:25:45 PDT
Committed 265315@main (c0e4e457ee25): <https://commits.webkit.org/265315@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 466763 [details].
Note You need to log in before you can comment on or make changes to this bug.