AX: AXTextMarker::boundaryPoint() can nullptr crash after WeakPtr<Node> is destroyed https://bugs.webkit.org/show_bug.cgi?id=258291 rdar://110921085

Reviewed by Chris Fleizach.

After creating a `WeakPtr` to a `Node`, `AXTextMarker::boundaryPoint()` calls `AccessibilityObject::replacedNodeNeedsCharacter`
with that node, which in turn calls `accessibilityIsIgnored`, which can cause side effects that destroy the original `WeakPtr` `Node`.
We need to re-check that the `Node` didn't become nullptr (get destroyed) after calling `AccessibilityObject::replacedNodeNeedsCharacter`.

* Source/WebCore/accessibility/AXTextMarker.cpp:
(WebCore::AXTextMarker::boundaryPoint const):

Canonical link: https://commits.webkit.org/265315@main